<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference />

    <net.kdt.pojavlaunch.prefs.MaterialPreference
        app:icon="@drawable/ic_px_gamepad"
        app:summary="@string/preference_edit_controls_summary"
        app:title="@string/preference_edit_controls_title">
        <intent
            android:action=".CustomControlsActivity"
            android:targetClass="net.kdt.pojavlaunch.CustomControlsActivity"
            android:targetPackage="@string/application_package" />
    </net.kdt.pojavlaunch.prefs.MaterialPreference>

    <androidx.preference.PreferenceCategory app:title="@string/preference_category_gestures">

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="false"
            app:icon="@drawable/ic_px_nogestures"
            app:key="disableGestures"
            app:summary="@string/mcl_disable_gestures_subtitle"
            app:title="@string/mcl_disable_gestures" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="false"
            app:key="disableDoubleTap"
            app:summary="@string/mcl_disable_swap_hand_subtitle"
            app:title="@string/mcl_disable_swap_hand" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:defaultValue="300"
            android:max="@integer/gesture_delay_seekbar_max"
            app:icon="@drawable/ic_px_gestures"
            app:key="timeLongPressTrigger"
            app:min="@integer/gesture_delay_seekbar_min"
            app:seekBarIncrement="@integer/gesture_delay_seekbar_increment"
            app:selectable="false"
            app:showSeekBarValue="true"
            app:summary="@string/mcl_setting_subtitle_longpresstrigger"
            app:title="@string/mcl_setting_title_longpresstrigger" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/preference_category_buttons">

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:max="@integer/button_scale_seekbar_max"
            app:icon="@drawable/ic_px_control_size"
            app:key="buttonscale"
            app:min="@integer/button_scale_seekbar_min"
            app:seekBarIncrement="@integer/button_scale_seekbar_increment"
            app:selectable="false"
            app:showSeekBarValue="true"
            app:summary="@string/mcl_setting_subtitle_buttonscale"
            app:title="@string/mcl_setting_title_buttonscale" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="buttonAllCaps"
            app:summary="@string/mcl_setting_subtitle_buttonallcaps"
            app:title="@string/mcl_setting_title_buttonallcaps" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/preference_category_virtual_mouse">

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:max="@integer/mouse_scale_seekbar_max"
            app:icon="@drawable/ic_px_mouse"
            app:key="mousescale"
            app:min="@integer/mouse_scale_seekbar_min"
            app:seekBarIncrement="@integer/mouse_scale_seekbar_increment"
            app:selectable="false"
            app:showSeekBarValue="true"
            app:summary="@string/mcl_setting_subtitle_mousescale"
            app:title="@string/mcl_setting_title_mousescale" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:max="@integer/mouse_speed_seekbar_max"
            app:icon="@drawable/ic_px_speed"
            app:key="mousespeed"
            app:min="@integer/mouse_speed_seekbar_min"
            app:seekBarIncrement="@integer/mouse_speed_seekbar_increment"
            app:selectable="false"
            app:showSeekBarValue="true"
            app:summary="@string/mcl_setting_subtitle_mousespeed"
            app:title="@string/mcl_setting_title_mousespeed" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            app:key="mouse_start"
            app:summary="@string/preference_mouse_start_description"
            app:title="@string/preference_mouse_start_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="gyroCategory"
        app:title="@string/preference_category_gyro_controls">
        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            app:key="enableGyro"
            app:summary="@string/preference_enable_gyro_description"
            app:title="@string/preference_enable_gyro_title" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:max="@integer/gyro_speed_seekbar_max"
            app:key="gyroSensitivity"
            app:min="@integer/gyro_speed_seekbar_min"
            app:seekBarIncrement="@integer/gyro_speed_seekbar_increment"
            app:selectable="false"
            app:showSeekBarValue="true"
            app:summary="@string/preference_gyro_sensitivity_description"
            app:title="@string/preference_gyro_sensitivity_title" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:max="@integer/gyro_rate_seekbar_max"
            app:key="gyroSampleRate"
            app:min="@integer/gyro_rate_seekbar_min"
            app:selectable="false"
            app:showSeekBarValue="true"
            app:summary="@string/preference_gyro_sample_rate_description"
            app:title="@string/preference_gyro_sample_rate_title" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="gyroSmoothing"
            app:summary="@string/preference_gyro_smoothing_description"
            app:title="@string/preference_gyro_smoothing_title" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            app:key="gyroInvertX"
            app:summary="@string/preference_gyro_invert_x_axis_description"
            app:title="@string/preference_gyro_invert_x_axis" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            app:key="gyroInvertY"
            app:summary="@string/preference_gyro_invert_y_axis_description"
            app:title="@string/preference_gyro_invert_y_axis" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/preference_category_controller_settings">
        <net.kdt.pojavlaunch.prefs.MaterialPreference
            app:fragment="net.kdt.pojavlaunch.fragments.GamepadMapperFragment"
            app:summary="@string/preference_remap_controller_description"
            app:title="@string/preference_remap_controller_title" />

        <net.kdt.pojavlaunch.prefs.GamepadRemapPreference
            app:summary="@string/preference_wipe_controller_description"
            app:title="@string/preference_wipe_controller_title" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:max="@integer/gamepad_deadzone_seekbar_max"
            app:key="gamepad_deadzone_scale"
            app:min="@integer/gamepad_deadzone_seekbar_min"
            app:seekBarIncrement="@integer/gamepad_deadzone_seekbar_increment"
            app:showSeekBarValue="true"
            app:summary="@string/preference_deadzone_scale_description"
            app:title="@string/preference_deadzone_scale_title" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>