<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference />

    <androidx.preference.PreferenceCategory app:title="@string/preference_category_miscellaneous">
        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_px_hash"
            app:key="checkGameFiles"
            app:summary="@string/mcl_setting_check_libraries_subtitle"
            app:title="@string/mcl_setting_check_libraries" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="fastStartupCheck"
            app:summary="@string/preference_go_vroom_description"
            app:title="@string/preference_go_vroom_title" />

        <net.kdt.pojavlaunch.prefs.MaterialListPreference
            android:defaultValue="default"
            app:entries="@array/download_source_names"
            app:entryValues="@array/download_source_values"
            app:key="downloadSource"
            app:summary="@string/preference_download_source_description"
            app:title="@string/preference_download_source_title" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="verifyManifest"
            app:summary="@string/preference_verify_manifest_description"
            app:title="@string/preference_verify_manifest_title" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="false"
            app:key="zinkPreferSystemDriver"
            app:summary="@string/preference_vulkan_driver_system_description"
            app:title="@string/preference_vulkan_driver_system_title" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>