<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference />

    <androidx.preference.PreferenceCategory app:title="@string/preference_category_video">
        <net.kdt.pojavlaunch.prefs.MaterialListPreference
            android:defaultValue="opengles2"
            android:icon="@drawable/ic_px_image_renderer"
            app:key="renderer"
            app:title="@string/mcl_setting_category_renderer"
            app:summary="%s" />

        <net.kdt.pojavlaunch.prefs.MaterialListPreference
            android:defaultValue="opengl"
            app:entries="@array/graphics_backend_names"
            android:icon="@drawable/ic_px_image"
            app:entryValues="@array/graphics_backend_values"
            app:key="preferredGraphicsBackend"
            app:title="@string/mcl_setting_title_preferred_graphics_backend"
            app:summary="@string/mcl_setting_subtitle_preferred_graphics_backend" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_px_viewport_expand"
            app:key="ignoreNotch"
            app:summary="@string/mcl_setting_subtitle_ignore_notch"
            app:title="@string/mcl_setting_title_ignore_notch" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:icon="@drawable/ic_px_resolution"
            app:key="resolutionRatio"
            app:min="@integer/resolution_seekbar_min"
            app:seekBarIncrement="@integer/resolution_seekbar_increment"
            app:selectable="false"
            app:showSeekBarValue="true"
            app:summary="@string/mcl_setting_subtitle_resolution_scaler"
            app:title="@string/mcl_setting_title_resolution_scaler" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="false"
            app:key="sustainedPerformance"
            app:summary="@string/preference_sustained_performance_description"
            app:title="@string/preference_sustained_performance_title" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="alternate_surface"
            app:summary="@string/mcl_setting_subtitle_use_surface_view"
            app:title="@string/mcl_setting_title_use_surface_view" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="false"
            app:key="force_vsync"
            app:summary="@string/preference_force_vsync_description"
            app:title="@string/preference_force_vsync_title" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="false"
            app:key="use_angle"
            app:summary="@string/preference_use_angle_description"
            app:title="@string/preference_use_angle_title" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="vsync_in_zink"
            app:summary="@string/preference_vsync_in_zink_description"
            app:title="@string/preference_vsync_in_zink_title" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
