<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference />

    <androidx.preference.PreferenceCategory app:title="@string/preference_category_java_tweaks">
        <net.kdt.pojavlaunch.prefs.MaterialPreference
            app:key="install_jre"
            app:persistent="false"
            app:summary="@string/multirt_subtitle"
            app:title="@string/multirt_title" />

        <net.kdt.pojavlaunch.prefs.MaterialEditTextPreference
            app:dialogTitle="@string/mcl_setting_title_javaargs"
            app:key="javaArgs"
            app:summary="@string/mcl_setting_subtitle_javaargs"
            app:title="@string/mcl_setting_title_javaargs" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            app:key="allocation"
            app:min="@integer/memory_seekbar_min"
            app:seekBarIncrement="@integer/memory_seekbar_increment"
            app:selectable="false"
            app:showSeekBarValue="true"
            app:summary="@string/mcl_memory_allocation_subtitle"
            app:title="@string/mcl_memory_allocation" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="java_sandbox"
            app:summary="@string/mcl_setting_java_sandbox_subtitle"
            app:title="@string/mcl_setting_java_sandbox" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>