<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference />

    <androidx.preference.PreferenceCategory app:title="@string/preference_category_experimental_settings">

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            app:key="dump_shaders"
            app:summary="@string/preference_shader_dump_description"
            app:title="@string/preference_shader_dump_title" />

        <net.kdt.pojavlaunch.prefs.MaterialSwitchPreference
            android:defaultValue="false"
            app:key="bigCoreAffinity"
            app:summary="@string/preference_force_big_core_desc"
            app:title="@string/preference_force_big_core_title" />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>