<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:key="">

    <Preference
        android:icon="@drawable/ic_px_image"
        android:key="video_screen_setting"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment"
        android:title="@string/preference_video_title"
        app:widgetLayoutResource="@layout/pref_widget_chevron" />

    <Preference
        android:icon="@drawable/ic_px_gamepad"
        android:key="control_screen_setting"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceControlFragment"
        android:title="@string/preference_control_title"
        app:widgetLayoutResource="@layout/pref_widget_chevron" />

    <Preference
        android:icon="@drawable/ic_px_java"
        android:key="java_screen_setting"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceJavaFragment"
        android:title="@string/preference_java_title"
        app:widgetLayoutResource="@layout/pref_widget_chevron" />

    <Preference
        android:icon="@drawable/ic_px_alt_sliders"
        android:key="misc_screen_setting"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceMiscellaneousFragment"
        android:title="@string/preference_misc_title"
        app:widgetLayoutResource="@layout/pref_widget_chevron" />

    <Preference
        android:icon="@drawable/ic_px_experiment"
        android:key="experimental_screen_setting"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceExperimentalFragment"
        android:title="@string/preference_experimental_title"
        app:widgetLayoutResource="@layout/pref_widget_chevron" />

    <SwitchPreference
        android:icon="@drawable/ic_px_translate"
        android:key="force_english"
        android:summary="@string/preference_force_english_description"
        android:title="@string/preference_force_english_title" />

    <Preference
        android:icon="@drawable/ic_px_bell"
        android:key="notification_permission_request"
        android:title="@string/preference_ask_for_notification_title"
        app:widgetLayoutResource="@layout/pref_widget_chevron" />

</PreferenceScreen>
