<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/top_log_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#CC222222"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/log_view_label_log_output"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintStart_toStartOf="@+id/top_log_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/content_log_toggle_autoscroll"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/preference_item_background"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textOff="@string/log_view_button_scroll_off"
        android:textOn="@string/log_view_button_scroll_on"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/content_log_toggle_log"
        app:layout_constraintTop_toTopOf="parent"/>

    <ToggleButton
        android:id="@+id/content_log_toggle_log"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/preference_item_background"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textOff="@string/log_view_button_output_off"
        android:textOn="@string/log_view_button_output_on"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toStartOf="@+id/log_view_cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/log_view_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/pref_toggle_cross"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/top_log_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.kdt.DefocusableScrollView
        android:id="@+id/content_log_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#AA111111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_log_view">

        <TextView
            android:id="@+id/content_log_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="#CCCCCC"
            android:textSize="12sp"
            android:textIsSelectable="true"
            tools:ignore="SmallSp" />

    </com.kdt.DefocusableScrollView>

</merge>